2007-04-04  Brian Bidulock  <bidulock@openss7.org>

	* include/sys/streams/strdebug.h: quiet down _TEST
	* include/sys/streams/stream.h: cache put and srv procedure pointers
	* include/sys/streams/strsubr.h: remove sd_muxinit entry
	* src/kernel/strpipe.c: calculate q_nfsrv and q_nbsrv
	* src/kernel/strsched.c:
	  - straighten out bit procedures
	  - calculate q_nfsrv and q_nbsrv on weldq()
	* src/kernel/strutil.c:
	  - straighten out bit procedures
	  - new bcanput(next)(any) implementation using q_nfsrv
	  - new qbackenable using q_nbsrv
	  - calculate q_nfsrv and q_nbsrv in qinsert(), qprocson(), qprocsoff()
	* src/modules/sth.c:
	  - straighten out bit procedures
	  - use q_putp cache pointer when linking streams
	  - set q_nfsrv and q_nbsrv when creating FIFOs and PIPEs.
	* src/test/perftest.c: kill children on signal when running asyncrhonous

2007-04-02  Brian Bidulock  <bidulock@openss7.org>

	* streams/doc/manual/bugs.texi: documented ldl reference counting bug

2007-04-01  Brian Bidulock  <bidulock@openss7.org>

	* src/kernel/strutil.c: performance tuning (QWANTR/QWANTW corrections)
	* src/modules/sth.c: performance tuning (QWANTR/QWANTW corrections)
	* src/test/perftest.c: performance tuning (QWANTR/QWANTW corrections)

2007-03-31  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man9/M_SETOPTS.9.man: doc updates for flow control corrections
	* doc/man/man9/bcanput.9.man: doc updates for flow control corrections
	* doc/man/man9/bcanputnext.9.man: doc updates for flow control corrections
	* doc/man/man9/canenable.9.man: doc updates for flow control corrections
	* doc/man/man9/canputnext.9.man: doc updates for flow control corrections
	* doc/man/man9/flushband.9.man: doc updates for flow control corrections
	* doc/man/man9/flushq.9.man: doc updates for flow control corrections
	* doc/man/man9/getq.9.man: doc updates for flow control corrections
	* doc/man/man9/insq.9.man: doc updates for flow control corrections