@@ -1,3 +1,8 @@
+2007-04-10  Brian Bidulock  <bidulock@openss7.org>
+
+	* include/sys/streams/strsubr.h: comment corrections
+	* src/kernel/strsched.c: se_seq wrapping and strbcflag clearing
+
 2007-04-04  Brian Bidulock  <bidulock@openss7.org>
 
 	* include/sys/streams/strdebug.h: quiet down _TEST
